ikiwiki (3.20161220) UNRELEASED; urgency=medium

  * Add CVE references for CVE-2016-10026
  * Add missing ikiwiki.setup for the manual test for CVE-2016-10026
  * git: don't issue a warning if the rcsinfo CGI parameter is undefined
  * git: do not fail to commit changes with a recent git version
    and an anonymous committer

 -- Simon McVittie <smcv@debian.org>  Wed, 21 Dec 2016 13:03:07 +0000

ikiwiki (3.20161219) unstable; urgency=medium

  [ Joey Hess ]
  * inline: Prevent creating a file named ".mdwn" when the
    postform is submitted with an empty title.

  [ Simon McVittie ]
  * Security: tell `git revert` not to follow renames. If it does, then
    renaming a file can result in a revert writing outside the wiki srcdir
    or altering a file that the reverting user should not be able to alter,
    an authorization bypass. Thanks, intrigeri. (CVE-2016-10026)
  * cgitemplate: remove some dead code. Thanks, blipvert
  * Restrict CSS matches against header class to not break
    Pandoc tables with header rows. Thanks, karsk
  * Make pagestats output more deterministic. Thanks, intrigeri

 -- Simon McVittie <smcv@debian.org>  Mon, 19 Dec 2016 20:34:23 +0000

ikiwiki (3.20160905) unstable; urgency=medium

  [ Joey Hess ]
  * Fix installation when prefix includes a string metacharacter.
    Thanks, Sam Hathaway.

  [ Simon McVittie ]
  * Use git log --no-renames to generate recentchanges, fixing the git
    test-case with git 2.9 (Closes: #835612)

 -- Simon McVittie <smcv@debian.org>  Mon, 05 Sep 2016 21:26:19 +0100

ikiwiki (3.20160728) unstable; urgency=medium

  * Explicitly remove current working directory from Perl's library
    search path, mitigating CVE-2016-1238 (see #588017)
  * wrappers: allocate new environment dynamically, so we won't overrun
    the array if third-party plugins add multiple environment variables.
  * Standards-Version: 3.9.8 (no changes required)

 -- Simon McVittie <smcv@debian.org>  Thu, 28 Jul 2016 10:41:56 +0100
